# EasyTransfor

./: .gitignore  CMakeLists.txt  main.cpp
config/: client.json  server.json
src/: CLI.h  Server.cpp  Server.h  Transfor.cpp  Transfor.h
